--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -21,7 +21,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
-        uses: action/checkout@v4
+        uses: actions/checkout@v4
       - name: Test
         run: docker compose --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Python flake8
@@ -36,7 +36,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
-        uses: action/checkout@v4
+        uses: actions/checkout@v4
       - name: Terraform lint
         run: |
           cd infra/
