--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Test
-        run: docker compose --rm app sh -c "python manage.py wait_for_db && python manage.py test"
+        run: docker compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Python flake8
-        run: docker compose --rm app sh -c "flake8"
+        run: docker compose run --rm app sh -c "flake8"
   terraform:
     name: Terraform
     runs-on: ubuntu-22.04
